--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,53 @@
+/* Configuracion Inicial */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
+/* Estilo del Header */
 header {
-    color: white;
-    padding: 30px 0;
-    text-align: center;
-    background-image: linear-gradient(rgba(0,0,0,0.5 ), rgba(0,0,0,0.5), rgba(0,0,0,0.5)),  url("/imagenes/thumb.jpg");
+    background-color: white;
+    color: #9ca3af;
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+/* Contenedor General */
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
-nav ul li {
-    display: inline;
+/* Navegacion */
+.nav-left, .nav-right {
+    display: flex;
+}
+
+.nav-left span, .nav-right span {
     margin: 0 15px;
+    font-size: 18px;
 }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
+.nav-left span:hover, .nav-right span:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+/* Logo */
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    height: 40px;
+    margin-right: 10px;
 }
 
 section {
