--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,12 @@ body {
 header {
     position: sticky;
     top: 0;
-    background-color: white;
-    color: #9ca3af;
+    background-color: #000000;
+    color: white;
     padding: 10px 0;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 2px solid white;
     z-index: 1000; /* Asegura que el header se mantenga arriba */
+    height: 70px;
 }
 
 /* Contenedor General */
@@ -30,21 +31,24 @@ header {
 /* Rotador de Imágenes */
 .carousel {
     position: relative;
-    max-width: 600px;
+    max-width: 350px;
     overflow: hidden;
     border: 2px solid #ddd;
-    border-radius: 10px;
-    margin: 20px auto; /* Centrado y margen superior/inferior */
+    border-radius: 30px;
+    margin:auto auto; /* Centrado y margen superior/inferior */
 }
 
 .carousel-imagenes {
+    width: 100%;
     display: flex;
     transition: transform 0.5s ease;
+    object-fit: cover;
 }
 
 .carousel-imagenes img {
     width: 100%;
     height: auto;
+    object-fit: cover;
 }
 
 /* Botones de Navegación del Rotador */
@@ -73,19 +77,27 @@ button:hover {
 }
 
 /* Navegacion */
-.nav-left, .nav-right {
+nav {
     display: flex;
-}
+    justify-content: center;
+    
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+  }
+  
+  nav ul li {
+    margin: 0 10px;
+    height: auto;
+  }
 
-.nav-left span, .nav-right span {
-    margin: 0 15px;
-    font-size: 18px;
-}
-
-.nav-left span:hover, .nav-right span:hover {
-    text-decoration: underline;
-    cursor: pointer;
-}
+  nav ul li button{
+    background-color: white;
+    height: 50px;
+  }
+  
 
 /* Logo */
 .logo {
@@ -94,12 +106,13 @@ button:hover {
 }
 
 .logo img {
-    height: 40px;
+    height: 100px;
     margin-right: 10px;
+    border-radius: 50%;
 }
 
 .hero {
-    background-color: #BDB8B8;
+    background-color: #9ca3af;
     color: #000;
     padding: 50px 20px;
     display: flex;
@@ -126,17 +139,8 @@ button:hover {
 }
 
 .hero-text p {
-    font-size: 18px;
-}
-
-.carousel {
-    margin-left: 20px; /* Espaciado entre el texto y el carrusel */
-}
-
-.hero-image img {
-    max-width: 100%;
-    height: auto;
-    border: 5px solid #ccc;
+    font-size: 20px;
+    text-align: justify;
 }
 
 /* Sección del Portafolio */
@@ -313,7 +317,7 @@ footer a:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.309);
     width: 60px;
     height: 60px;
     border-radius: 50%;
