--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,6 @@ nav ul li button {
 }
 
 .hero {
-    background-color: #9ca3af;
     color: #000;
     padding: 50px 20px;
     display: flex;
@@ -145,6 +144,10 @@ nav ul li button {
 /* Galería de imágenes */
 h2 {
     text-align: center;
+}
+
+portafolio-section{
+    background-image: url(https://images.adsttc.com/media/images/5d44/14fa/284d/d1fd/3a00/003d/large_jpg/eiffel-tower-in-paris-151-medium.jpg?1564742900) ;
 }
 
 .gallery-container {
