--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,14 @@ body {
     box-sizing: border-box;
 }
 
-
+#translateButton {
+    width: 50px;
+    height: auto;
+    cursor: pointer;
+    position: relative;
+    top: -16px; /* Ajusta este valor según sea necesario */
+  }
+  
 
 /* Estilo del Header */
 header {
