--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ body {
 header {
     position: sticky;
     top: 0;
-    background-color: #000000;
-    color: white;
+    background-color: #000000; /*COLOR FIJO*/
+    color: white; /*COLOR FIJO*/
     padding: 10px 0;
     z-index: 1000;
     height: 70px;
@@ -40,8 +40,8 @@ header {
 /* Botón del Menú */
 .menu-toggle {
     display: none;
-    background-color: #000;
-    color: white;
+    background-color: #000;/*COLOR FIJO*/
+    color: white; /*COLOR FIJO*/
     border: none;
     height: 50px;
     font-size: 24px;
@@ -69,15 +69,15 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: white; /*COLOR FIJO*/
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s, color 0.3s;
 }
 
 nav ul li a:hover {
-    background-color: #555;
-    color: white;
+    background-color: #ffffff; /*COLOR FIJO*/
+    color: rgb(0, 0, 0); /*COLOR FIJO*/
 }
 
 /* Logo */
@@ -92,12 +92,19 @@ nav ul li a:hover {
     border-radius: 50%;
 }
 
+
+:root {
+    --primary-color: black;
+    --secondary-color: white;
+    --third-color:#ccc;
+}
+
 #icon {
-    width: 50px; 
-    height: auto; 
+    width: auto;
+    height: 43px;
     cursor: pointer;
     position: relative;
-    top: -16px;
+    top: -12px;
 }
 
 
@@ -119,7 +126,7 @@ nav ul li a:hover {
         left: 0;
         width: 100%;
         height: auto;
-        background-color: #000;
+        background-color: #000; /*COLOR FIJO*/
     }
 
     .nav ul {
@@ -136,13 +143,14 @@ nav ul li a:hover {
 
 /* Sección Hero */
 .hero {
-    color: #000;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     padding: 50px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 400px;
-    border: 2px solid #000;
+    border: 2px solid var(--secondary-color);
     /* Línea alrededor del área de texto */
 }
 
@@ -158,10 +166,10 @@ nav ul li a:hover {
     max-width: 45%;
     text-align: center;
     margin-right: 30px;
-    border: 1px solid #000;
+    border: 1px solid var(--secondary-color);
     /* Línea alrededor del área de texto */
     padding: 20px;
-    background-color: rgb(255, 255, 255);
+    background-color: var();
 }
 
 /* Estilo del Carrusel */
@@ -189,10 +197,10 @@ nav ul li a:hover {
 button.prev,
 button.next {
     position: absolute;
-    top: 50%;
+    top: 65%;
     transform: translateY(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+    background-color: rgba(0, 0, 0, 0.5); /*COLOR FIJO*/
+    color: white; /*COLOR FIJO*/
     border: none;
     padding: 10px;
     cursor: pointer;
@@ -209,16 +217,27 @@ button.next {
 
 /* Estilo de las Secciones */
 section {
+    background-color: var(--primary-color);
     padding: 50px 20px;
     text-align: center;
 }
 
+h2{
+    color: var(--secondary-color);
+}
+
 .portafolio-section {
+    color: var(--secondary-color);
     background-image: url(https://images.adsttc.com/media/images/5d44/14fa/284d/d1fd/3a00/003d/large_jpg/eiffel-tower-in-paris-151-medium.jpg?1564742900);
     padding: 50px 20px;
-    border: 2px solid #000;
+    border: 2px solid var(--secondary-color)
     /* Línea alrededor del área de texto */
 }
+
+p{
+    color: var(--secondary-color);
+}
+
 
 .gallery-container {
     display: flex;
@@ -228,7 +247,7 @@ section {
 
 div.gallery {
     margin: 10px;
-    box-shadow: 0 4px 8px 0 rgb(107, 118, 125), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgb(107, 118, 125), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /*COLOR FIJO*/
     width: 250px;
     transition: transform 0.3s;
 }
@@ -239,7 +258,7 @@ div.gallery img {
 }
 
 div.gallery:hover {
-    border: 1px solid rgb(53, 53, 53);
+    border: 1px solid var(--secondary-color);
     transform: rotateX(10deg) translateY(-10px);
 }
 
@@ -247,7 +266,7 @@ div.text-gallery {
     text-align: center;
     padding: 10px;
     font-size: 1em;
-    border: 1px solid #000;
+    border: 1px solid var(--secondary-color);
     /* Línea alrededor del área de texto */
 }
 
@@ -270,9 +289,9 @@ div.text-gallery {
     /* Full height */
     overflow: auto;
     /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0); /*COLOR FIJO*/
     /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.9); /*COLOR FIJO*/
     /* Black w/ opacity */
 }
 
@@ -311,22 +330,6 @@ div.text-gallery {
     }
 }
 
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #fff;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
-}
 
 .prev,
 .next {
@@ -336,7 +339,7 @@ div.text-gallery {
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: white;
+    color: white; /*COLOR FIJO*/
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
@@ -356,14 +359,14 @@ div.text-gallery {
 
 .prev:hover,
 .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8); /*COLOR FIJO*/
 }
 
 
 /* Línea Divisora */
 .divider {
     border: none;
-    border-top: 1px solid #ffffff;
+    border-top: 1px solid #ffffff; /*COLOR FIJO*/
     margin: 40px 0;
 }
 
@@ -377,7 +380,7 @@ div.text-gallery {
 
 .decorative-divider hr.divider {
     border: none;
-    border-top: 3px solid #000;
+    border-top: 3px solid #000; /*COLOR FIJO*/
     width: 50%;
     position: relative;
 }
@@ -390,16 +393,17 @@ div.text-gallery {
     top: -12px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #fff;
+    background-color: #fff; /*COLOR FIJO*/
     padding: 0 10px;
-    color: #000;
+    color: #000; /*COLOR FIJO*/
 }
 
 /* Sección Sobre Nosotros */
 #sobre-nosotros {
     padding: 50px 20px;
-    background-color: #f4f4f4;
+    background-color: var(--primary-color);
     text-align: center;
+    border: 2px solid var(--secondary-color);
 }
 
 .sobre-nosotros-content {
@@ -408,16 +412,17 @@ div.text-gallery {
     align-items: center;
     max-width: 1200px;
     margin: auto;
+    
 
 }
 
 .sobre-nosotros-text {
 
-    color: #000;
+    color: var(--secondary-color);
     padding: 50px 20px;
     justify-content: center;
     align-items: center;
-    border: 2px solid #000;
+    border: 2px solid var(--secondary-color);
     margin: 35px;
 }
 
@@ -436,20 +441,22 @@ div.text-gallery {
 
 /* Sección Contacto */
 .contact {
-    background-color: #ffffff;
+    background-color: var(--primary-color);
     padding: 50px 20px;
     text-align: center;
-    border: 2px solid #000;
+    border: 2px solid var(--secondary-color);
     /* Línea alrededor del área de texto */
 }
 
 .contact h2 {
+    color: var(--secondary-color);
     font-size: 28px;
     margin-bottom: 20px;
 }
 
 /* Sección Formulario */
 form {
+    color: var(--secondary-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -470,14 +477,14 @@ form input,
 form textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid var(--third-color);
     border-radius: 4px;
 }
 
 form button {
     padding: 10px 20px;
-    background-color: #333;
-    color: white;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -485,15 +492,16 @@ form button {
 }
 
 form button:hover {
-    background-color: #555;
+    background-color: #555;/*COLOR FIJO*/
 }
 
 /* Sección Footer */
 footer {
-    background-color: #000000;
-    color: white;
+    background-color: #000000; /*COLOR FIJO*/
+    color: white; /*COLOR FIJO*/
     text-align: center;
     padding: 20px 0;
+    border: 2px solid var(--secondary-color);
 }
 
 footer p {
@@ -501,7 +509,7 @@ footer p {
 }
 
 footer a {
-    color: white;
+    color: white; /*COLOR FIJO*/
     text-decoration: none;
 }
 
@@ -514,11 +522,11 @@ footer a:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: rgba(0, 0, 0, 0.309);
+    background-color: rgba(0, 0, 0, 0.309); /*COLOR FIJO*/
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);/*COLOR FIJO*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -571,21 +579,23 @@ footer a:hover {
 
     @media (max-width: 768px) {
         /* Otros estilos responsive existentes */
-    
+
         nav ul li {
-            margin: 20px 0; 
+            margin: 20px 0;
         }
-    
+
         #translateButton {
-            margin-top: 20px;
-            margin-right: 20px; 
+            margin-top: 10px;
+            margin-right: 20px;
+            margin-right: 10px;
         }
-    
+
         #icon {
-            margin-left: 20px; 
+            top: -20px;
         }
+
     }
-    
+
 }
 
 @media (max-width: 480px) {
